# Pyro

./: README.md  pyproject.toml
pyro/: __init__.py  _common.py  gpu_array.py
tests/: test_sscal.py
